{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 214,
  "lineage": "f51190db-e045-10bd-deab-da0ad0b128af",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:920372996939:internet-gateway/igw-07e764ff2344c177f",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-04046db55268c9875"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-04046db55268c9875"
                ]
              }
            ],
            "id": "igw-07e764ff2344c177f",
            "internet_gateway_id": "igw-07e764ff2344c177f",
            "owner_id": "920372996939"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:920372996939:vpc/vpc-04046db55268c9875",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a2291423c6dbd920",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0b9452652883615cb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04046db55268c9875",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05ea296c084cc5724",
            "owner_id": "920372996939"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mlops_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0694d931cee176e7d",
            "arn": "arn:aws:ec2:eu-west-1:920372996939:instance/i-08de1abf1ea0e83d0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "main_mlops_profile",
            "id": "i-08de1abf1ea0e83d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mlops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8b3156a41cef8cb",
            "private_dns": "ip-172-31-96-184.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.96.184",
            "public_dns": "ec2-108-129-111-116.eu-west-1.compute.amazonaws.com",
            "public_ip": "108.129.111.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04c06ac21f708da9f",
                "volume_size": 29,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "mlops-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01facde83d2ed9058",
            "tags": {
              "Name": "mlops-server",
              "Project": "mlops-free-tier"
            },
            "tags_all": {
              "Name": "mlops-server",
              "Project": "mlops-free-tier"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0883615b1a2898629"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.mlops_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.mlops_sg",
            "aws_subnet.public",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:920372996939:route-table/rtb-011ab80d9dbeaca38",
            "id": "rtb-011ab80d9dbeaca38",
            "owner_id": "920372996939",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e764ff2344c177f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mlops-public-rt",
              "Project": "mlops-free-tier"
            },
            "tags_all": {
              "Name": "mlops-public-rt",
              "Project": "mlops-free-tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-04046db55268c9875"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_internet_gateway.existing",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0899567da9c46ccdc",
            "route_table_id": "rtb-011ab80d9dbeaca38",
            "subnet_id": "subnet-01facde83d2ed9058"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "data.aws_internet_gateway.existing",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mlops_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:920372996939:security-group/sg-0883615b1a2898629",
            "description": "Security group for MLOps server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0883615b1a2898629",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "API access",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "mlops-security-group",
            "name_prefix": "",
            "owner_id": "920372996939",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-sg",
              "Project": "mlops-free-tier"
            },
            "tags_all": {
              "Name": "mlops-sg",
              "Project": "mlops-free-tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-04046db55268c9875"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:920372996939:subnet/subnet-01facde83d2ed9058",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.31.96.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01facde83d2ed9058",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "920372996939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mlops-public-subnet",
              "Project": "mlops-free-tier"
            },
            "tags_all": {
              "Name": "mlops-public-subnet",
              "Project": "mlops-free-tier"
            },
            "vpc_id": "vpc-04046db55268c9875"
          },
          "dependencies": [
            "data.aws_vpc.existing"
          ]
        }
      ]
    }
  ]
}